--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body> <br /> <br />
     <div class="container">
-        <h1>Calculadora de Combustível</h1>
+        <h1>Calculadora de Combustível!</h1>
         <div class="form">
             <label for="gasolina">Preço da Gasolina:</label>
             <input type="number" id="gasolina" step="0.01" placeholder="Digite o preço da gasolina">
